// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel should match the snapshot 1`] = `
<div
  className="Carousel"
>
  <h2>
    Favorites
  </h2>
  <button
    className="forwards-btn"
    onClick={[Function]}
  >
    <i
      className="fas fa-chevron-left fa-5x"
    />
  </button>
  <button
    className="backwards-btn"
    onClick={[Function]}
  >
    <i
      className="fas fa-chevron-right fa-5x"
    />
  </button>
  <div
    className="movies-container"
  >
    <Connect(withRouter(MovieCard)) />
    <Connect(withRouter(MovieCard)) />
  </div>
</div>
`;

exports[`Carousel should not render movie cards if data hasnt yet been fetched 1`] = `
<div
  className="Carousel"
>
  <h2>
    Favorites
  </h2>
  <button
    className="forwards-btn"
    onClick={[Function]}
  >
    <i
      className="fas fa-chevron-left fa-5x"
    />
  </button>
  <button
    className="backwards-btn"
    onClick={[Function]}
  >
    <i
      className="fas fa-chevron-right fa-5x"
    />
  </button>
  <div
    className="movies-container"
  />
</div>
`;
